# image-insights-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLOUDFLARE_DEPLOYMENT.md  DOCUMENTATION_AUDIT_SUMMARY.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  tsconfig.json  wrangler.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py  __version__.py  config.py  main.py
app/api/: __init__.py  image_analysis.py  responses.py
app/core/: __init__.py  cache.py  histogram.py  luminance.py  resize.py  url_handler.py  validators.py
docs/: API_DOC.md  BENCHMARK.md  CLOUDFLARE_DEPLOYMENT.md  DOCUMENTATION_METADATA.md  OPENAPI_GENERATION.md  PRD.md  RELEASE_PROCESS.md  TECHNICALS.md  swagger.json
scripts/: benchmark.py  benchmark_docker.sh  export_openapi.py
src/: index.ts
tests/: conftest.py  test_api.py  test_core.py  test_logging.py
